@@ -73,6 +73,9 @@
       tildexpand.h uidswap.h uuencode.h xmalloc.h]
      remove comments from .h, since they are cut&paste from the .c files
      and out of sync
+   - dugsong@cvs.openbsd.org 2001/06/26 17:41:49
+     [servconf.c]
+     #include <kafs.h>
  
 20010629
  - (bal) Removed net_aton() since we don't use it any more
@@ -5900,4 +5903,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1360 2001/07/04 04:46:56 mouring Exp $
+$Id: ChangeLog,v 1.1361 2001/07/04 04:48:36 mouring Exp $
